--- a/project-2/src/app/components/topbar/topbar.component.html
+++ b/project-2/src/app/components/topbar/topbar.component.html
@@ -1,1 +1,25 @@
-<p>topbar works!</p>
+<div class="container">
+    <div class="wrapper">
+        <div class="row">
+            <div class="brand">
+                <a href="javascript:void(0)">Bussiness</a>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="javascript:void(0)">Home</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">Service</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">About</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</div>
